--- a/conf/server.ini
+++ b/conf/server.ini
@@ -8,9 +8,9 @@ worker_num = 2
 #设置worker进程的最大任务数 默认为0  --应对PHP的内存溢出 --只能用于同步阻塞、无状态请求的响应式服务器程序
 max_request = 0
 #守护进程方式运行，在长时间运行服务器上必须开启  否则ssh连接退出以后进程终止
-daemonize = false
+#daemonize = false
 #开启守护进程后配置logfile文件 记录程序输出内容 否则将全部抛弃
-log_file = ./server.log
+#log_file = ./server.log
 #0 DEBUG 1 TRACE 2 INFO 3 NOTICE 4 WARNING 5 ERROR
 #log_level = 5
 appname = 'syapp'
