初步完成swoole调用yaf

--- a/conf/server.ini
+++ b/conf/server.ini
@@ -10,8 +10,8 @@ max_request = 0
 ;守护进程方式运行，在长时间运行服务器上必须开启  否则ssh连接退出以后进程终止
 ;daemonize = false
 ;开启守护进程后配置logfile文件 记录程序输出内容 否则将全部抛弃
-;log_file = ./server.log
+log_file = ./server.log
 ;0 DEBUG 1 TRACE 2 INFO 3 NOTICE 4 WARNING 5 ERROR
-;log_level = 5
+log_level = 5
 appname = 'syapp'
 [mysql]
